Add upload attachment endpoint
